:bug: Fix custom cursor appear on mobile device

--- a/src/components/Cursor/Cursor.css
+++ b/src/components/Cursor/Cursor.css
@@ -37,3 +37,13 @@
         box-shadow: 0 0 20px 10px rgba(41, 136, 255, 0.5);
     }
 }
+
+@media only screen and (max-width: 1280px) {
+    body {
+        cursor: initial;
+    }
+
+    .cursor {
+        display: none;
+    }
+}
